namespace Lab4.Infrastructure.Applicant.Enums;

public enum EducationLevel
{
    Bachelor,
    Master,
    PhD
}