@startuml
'https://plantuml.com/class-diagram

entity BaseEntity<TKey>
{
+ TKey Id
}
entity ApplicantEntity
{
 + string LastName 

 + string FirstName 

 + string MiddleName 

 + DateTime DateOfBirthday 

 + Dictionary<string, float> ExamsResults

 + List<string> Specialties

 + EducationLevel EducationLevel 

 + StudyForm StudyForm 
 
 + string ToString()
}

BaseEntity <|-- ApplicantEntity : < owns
StudyForm <|-- ApplicantEntity : < owns
EducationLevel <|-- ApplicantEntity : < owns

enum StudyForm {
StateFunded
Contract
}

enum EducationLevel
{
Bachelor
Master
PhD
}

class ApplicantBuilder
{
- ApplicantEntity _applicantModel
}

IApplicantBuilder --|> ApplicantBuilder : implement

interface IApplicantBuilder
{
+ IApplicantBuilder SetFirstName(string firstName);
+ IApplicantBuilder SetLastName(string lastName);
+ IApplicantBuilder SetMiddleName(string middleName);
+ IApplicantBuilder SetDateOfBirth(DateTime dateOfBirth);
+ IApplicantBuilder AddExamResult(int scores, string subject);
+ IApplicantBuilder AddSpeciality(string speciality);
+ IApplicantBuilder SetEducationLevel(EducationLevel educationLevel);
+ IApplicantBuilder SetStudyForm(StudyForm studyForm);
+ ApplicantEntity Build();
}

interface ILogger
{
    void Save(ApplicantEntity applicantEntity, string fileName);
}

class ConsoleLogger 
{
    void Save(ApplicantEntity applicantEntity, string fileName)
}

class XmlLogger 
{
    void Save(ApplicantEntity applicantEntity, string fileName)
}

class JsonLogger 
{
    void Save(ApplicantEntity applicantEntity, string fileName)
}

ILogger --|> ConsoleLogger : implement
ILogger --|> JsonLogger : implement
ILogger --|> XmlLogger : implement

class LoggerProviderFactory
{
    static ILogger GetLoggingProvider(LoggingProvider loggingProvider);
}

enum LoggingProvider
{
    Json,
    Xml,
    Console
}

IApplicantBuilder --* StudyForm
IApplicantBuilder --* EducationLevel
ApplicantBuilder --* ApplicantEntity

ConsoleLogger --* ApplicantEntity
XmlLogger --* ApplicantEntity
JsonLogger --* ApplicantEntity

LoggerProviderFactory --* LoggingProvider
@enduml